--- a/source3/configure.in
+++ b/source3/configure.in
@@ -6219,7 +6219,8 @@ MSG
 fi
 
 AC_ARG_ENABLE(merged-build, 
-[AS_HELP_STRING([--enable-merged-build], [Build Samba 4 as well])])
+[AS_HELP_STRING([--enable-merged-build], [Build Samba 4 as well])], 
+[], [ enable_merged_build=auto ])
 
 if test x$enable_merged_build = xyes; then
 	MERGED_BUILD=1
