--- a/source3/Makefile.in
+++ b/source3/Makefile.in
@@ -251,7 +251,8 @@ LIBNDR_DRSUAPI_OBJ = librpc/ndr/ndr_drsuapi.o \
 		     librpc/gen_ndr/ndr_drsuapi.o \
 		     librpc/gen_ndr/ndr_drsblobs.o
 
-COMPRESSION_OBJ = ../lib/compression/mszip.o
+COMPRESSION_OBJ = ../lib/compression/mszip.o \
+				  ../lib/compression/lzxpress.o
 
 DRSUAPI_OBJ = $(LIBNDR_DRSUAPI_OBJ) \
 	      $(COMPRESSION_OBJ)
