--- a/source3/Makefile.in
+++ b/source3/Makefile.in
@@ -376,7 +376,7 @@ LIBADS_OBJ = libads/ldap.o libads/ldap_printer.o \
 	     libads/ldap_schema.o libads/util.o libads/ndr.o
 
 LIBADS_SERVER_OBJ = libads/kerberos_verify.o libads/authdata.o \
-		    librpc/ndr/ndr_krb5pac.o \
+		    ../librpc/ndr/ndr_krb5pac.o \
 		    librpc/gen_ndr/ndr_krb5pac.o
 
 SECRETS_OBJ = passdb/secrets.o passdb/machine_sid.o
