--- a/source3/Makefile.in
+++ b/source3/Makefile.in
@@ -56,6 +56,7 @@ PIDL_ARGS=@PIDL_ARGS@
 TERMLDFLAGS=@TERMLDFLAGS@
 TERMLIBS=@TERMLIBS@
 PRINT_LIBS=@PRINT_LIBS@
+ZLIB_LIBS=@ZLIB_LIBS@
 AUTH_LIBS=@AUTH_LIBS@
 ACL_LIBS=@ACL_LIBS@
 PASSDB_LIBS=@PASSDB_LIBS@
@@ -251,8 +252,11 @@ LIBNDR_DRSUAPI_OBJ = librpc/ndr/ndr_drsuapi.o \
 		     librpc/gen_ndr/ndr_drsuapi.o \
 		     librpc/gen_ndr/ndr_drsblobs.o
 
+ZLIB_OBJ = @ZLIB_OBJS@
+
 COMPRESSION_OBJ = ../lib/compression/mszip.o \
-				  ../lib/compression/lzxpress.o
+				  ../lib/compression/lzxpress.o \
+				  $(ZLIB_OBJ)
 
 DRSUAPI_OBJ = $(LIBNDR_DRSUAPI_OBJ) \
 	      $(COMPRESSION_OBJ)
