Share idl_types.h.

--- a/source3/Makefile.in
+++ b/source3/Makefile.in
@@ -1198,14 +1198,16 @@ modules:: SHOWFLAGS $(MODULES)
 #####################################################################
 ## Perl IDL Compiler
 samba3-idl::
-	@IDL_FILES="lsa.idl dfs.idl echo.idl winreg.idl initshutdown.idl \
-		srvsvc.idl svcctl.idl eventlog.idl wkssvc.idl netlogon.idl notify.idl \
-		epmapper.idl messaging.idl xattr.idl misc.idl samr.idl security.idl \
-		dssetup.idl krb5pac.idl ntsvcs.idl libnetapi.idl drsuapi.idl drsblobs.idl \
-		nbt.idl" \
-		IDL_PATH="librpc/idl" \
-		CPP="$(CPP)" PIDL="../pidl/pidl" \
-	 srcdir="$(srcdir)" $(srcdir)/script/build_idl.sh $(PIDL_ARGS)
+	@PIDL_ARGS="$(PIDL_ARGS)" CPP="$(CPP)" PIDL="../pidl/pidl" \
+	 srcdir="$(srcdir)" $(srcdir)/script/build_idl.sh librpc/idl/lsa.idl \
+	 	../librpc/idl/dfs.idl ../librpc/idl/echo.idl librpc/idl/winreg.idl \
+		librpc/idl/initshutdown.idl librpc/idl/srvsvc.idl librpc/idl/svcctl.idl \
+		librpc/idl/eventlog.idl librpc/idl/wkssvc.idl librpc/idl/netlogon.idl \
+		../librpc/idl/notify.idl librpc/idl/epmapper.idl librpc/idl/messaging.idl \
+		librpc/idl/xattr.idl librpc/idl/misc.idl librpc/idl/samr.idl \
+		librpc/idl/security.idl ../librpc/idl/dssetup.idl librpc/idl/krb5pac.idl \
+		librpc/idl/ntsvcs.idl librpc/idl/libnetapi.idl librpc/idl/drsuapi.idl \
+		librpc/idl/drsblobs.idl librpc/idl/nbt.idl
 
 #####################################################################
 
