--- a/source3/Makefile.in
+++ b/source3/Makefile.in
@@ -1204,7 +1204,7 @@ samba3-idl::
 		librpc/idl/initshutdown.idl librpc/idl/srvsvc.idl librpc/idl/svcctl.idl \
 		librpc/idl/eventlog.idl librpc/idl/wkssvc.idl librpc/idl/netlogon.idl \
 		../librpc/idl/notify.idl librpc/idl/epmapper.idl librpc/idl/messaging.idl \
-		librpc/idl/xattr.idl librpc/idl/misc.idl librpc/idl/samr.idl \
+		librpc/idl/xattr.idl ../librpc/idl/misc.idl librpc/idl/samr.idl \
 		librpc/idl/security.idl ../librpc/idl/dssetup.idl librpc/idl/krb5pac.idl \
 		librpc/idl/ntsvcs.idl librpc/idl/libnetapi.idl librpc/idl/drsuapi.idl \
 		librpc/idl/drsblobs.idl librpc/idl/nbt.idl
