--- a/source3/Makefile.in
+++ b/source3/Makefile.in
@@ -1207,7 +1207,7 @@ samba3-idl::
 		../librpc/idl/xattr.idl ../librpc/idl/misc.idl librpc/idl/samr.idl \
 		../librpc/idl/security.idl ../librpc/idl/dssetup.idl librpc/idl/krb5pac.idl \
 		../librpc/idl/ntsvcs.idl librpc/idl/libnetapi.idl librpc/idl/drsuapi.idl \
-		librpc/idl/drsblobs.idl librpc/idl/nbt.idl
+		librpc/idl/drsblobs.idl ../librpc/idl/nbt.idl
 
 #####################################################################
 
