s3: Fix make clean

--- a/source3/Makefile.in
+++ b/source3/Makefile.in
@@ -2688,7 +2688,7 @@ clean:: cleanlibs
 		.headers.stamp */src/*.o \
 		../lib/*/*.o \
 		../libcli/*.o ../libcli/*/*.o \
-		../librpc/*/*.o \
+		../librpc/*/*.o
 	-rm -rf t_dir
 
 include/build_env.h: script/build_env.sh
