idl: share drsblobs idl.
Guenther

--- a/source3/Makefile.in
+++ b/source3/Makefile.in
@@ -250,6 +250,7 @@ PASSCHANGE_OBJ = libsmb/passchange.o
 LIBNDR_DRSUAPI_OBJ = ../librpc/ndr/ndr_drsuapi.o \
 		     ../librpc/ndr/ndr_compression.o \
 		     librpc/gen_ndr/ndr_drsuapi.o \
+		     ../librpc/ndr/ndr_drsblobs.o \
 		     librpc/gen_ndr/ndr_drsblobs.o
 
 ZLIB_OBJ = @ZLIB_OBJS@
@@ -1213,7 +1214,7 @@ samba3-idl::
 		../librpc/idl/xattr.idl ../librpc/idl/misc.idl librpc/idl/samr.idl \
 		../librpc/idl/security.idl ../librpc/idl/dssetup.idl librpc/idl/krb5pac.idl \
 		../librpc/idl/ntsvcs.idl librpc/idl/libnetapi.idl ../librpc/idl/drsuapi.idl \
-		librpc/idl/drsblobs.idl ../librpc/idl/nbt.idl
+		../librpc/idl/drsblobs.idl ../librpc/idl/nbt.idl
 
 #####################################################################
 
