reconnect values for testing
git-svn-id: svn://svn.h5l.se/heimdal/trunk/heimdal@23939 ec53bebd-3082-4978-b11e-865c3cabbd6b

--- a/tests/kdc/krb5.conf.in
+++ b/tests/kdc/krb5.conf.in
@@ -7,6 +7,9 @@
 
 [appdefaults]
 	pkinit_anchors = FILE:@srcdir@/../../lib/hx509/data/ca.crt
+	reconnect-min = 2s
+	reconnect-backoff = 2s
+	reconnect-max = 10s
 
 [realms]
 	TEST.H5L.SE = {
