check that kinit *@$R failes
git-svn-id: svn://svn.h5l.se/heimdal/trunk/heimdal@23940 ec53bebd-3082-4978-b11e-865c3cabbd6b

--- a/tests/ldap/check-ldap.in
+++ b/tests/ldap/check-ldap.in
@@ -136,6 +136,11 @@ echo "Getting ${server} ticket"
 ${kgetcred} ${server}@${R} || { ec=1 ; eval "${testfailed}"; }
 
 
+echo "Getting *@$R inital ticket (fail)";
+${kinit} --password-file=${objdir}/foopassword '*'@$R 2>/dev/null && \
+	{ ec=1 ; eval "${testfailed}"; }
+
+
 echo "killing kdc (${kdcpid})"
 kill $kdcpid || exit 1
 
