--- a/source3/Makefile.in
+++ b/source3/Makefile.in
@@ -2799,6 +2799,9 @@ valgrindtest:: all torture timelimit
 	 VALGRIND="valgrind -q --num-callers=30 --log-file=${selftest_prefix}/valgrind.log" \
 	 PERL="$(PERL)" $(srcdir)/script/tests/selftest.sh ${selftest_prefix} all "${smbtorture4_path}"
 
+selftest::
+	../selftest/selftest.pl --prefix=st --target=samba3 --testlist="`pwd`/selftest/tests.sh|" 
+
 # Check for Winbind struct 32/64bit padding
 test_wbpad:
 	@echo "Testing winbind request/response structure for 32/64bit padding"
