--- a/source3/configure.in
+++ b/source3/configure.in
@@ -6236,7 +6236,10 @@ if test x$enable_merged_build = xauto; then
 	AC_MSG_CHECKING([whether it would be possible to do a merged build])
 	AC_MSG_RESULT([$merged_build_possible])
 
-	dnl FIXME: enable_merged_build=$merged_build_possible
+	# Enable merged build automatically if possible, when in developer mode
+	if test "x$developer" = xyes; then
+		enable_merged_build=$merged_build_possible
+	fi
 fi
 
 if test x$enable_merged_build = xyes; then
