--- a/source3/Makefile.in
+++ b/source3/Makefile.in
@@ -2807,12 +2807,17 @@ valgrindtest:: all torture timelimit
 	 VALGRIND="valgrind -q --num-callers=30 --log-file=${selftest_prefix}/valgrind.log" \
 	 PERL="$(PERL)" $(srcdir)/script/tests/selftest.sh ${selftest_prefix} all "${smbtorture4_path}"
 
+SELFTEST_FORMAT = plain
+
 selftest:: all torture timelimit
 	@../selftest/selftest.pl --prefix=st --target=samba3 \
 		--testlist="$(srcdir)/selftest/tests.sh|" \
 		--expected-failures=$(srcdir)/selftest/knownfail \
 		--exclude=$(srcdir)/selftest/skip \
-		--socket-wrapper
+		--socket-wrapper $(TESTS) --format=$(SELFTEST_FORMAT)
+
+selftest-%:
+	$(MAKE) selftest TESTS=$*
 
 # Check for Winbind struct 32/64bit padding
 test_wbpad:
