Move charset library to top level.

--- a/source4/Makefile
+++ b/source4/Makefile
@@ -59,7 +59,7 @@ authsrcdir := auth
 nsswitchsrcdir := nsswitch
 libsrcdir := lib
 libsocketsrcdir := lib/socket
-libcharsetsrcdir := lib/charset
+libcharsetsrcdir := ../lib/util/charset
 ldb_sambasrcdir := lib/ldb-samba
 tdbsrcdir := ../lib/tdb
 ldbsrcdir := lib/ldb
