Build sqlite as a real library, not as a convince lib, rename it to heimsqlite.
git-svn-id: svn://svn.h5l.se/heimdal/trunk/heimdal@23958 ec53bebd-3082-4978-b11e-865c3cabbd6b

--- a/lib/sqlite/Makefile.am
+++ b/lib/sqlite/Makefile.am
@@ -2,7 +2,7 @@
 
 include $(top_srcdir)/Makefile.am.common
 
-noinst_LTLIBRARIES = libsqlite.la
+lib_LTLIBRARIES = libheimsqlite.la
 
 noinst_HEADERS = sqlite3.h sqlite3ext.h
 
