add back krb55 symbols
git-svn-id: svn://svn.h5l.se/heimdal/trunk/heimdal@23989 ec53bebd-3082-4978-b11e-865c3cabbd6b

--- a/lib/framework/Makefile.am
+++ b/lib/framework/Makefile.am
@@ -35,7 +35,7 @@ Heimdal_la_LDFLAGS += -Wl,-dead_strip -Wl,-exported_symbols_list,symbollist.map
 #	../hx509/version-script.map
 
 SYMBOLFILES = \
-	../krb5/version-script.map
+	../krb5/version-script.map \
 	../gssapi/version-script.map
 
 symbollist.map: $(SYMBOLFILES)
