--- a/source3/Makefile.in
+++ b/source3/Makefile.in
@@ -2801,7 +2801,8 @@ Makefile: $(srcdir)/Makefile.in config.status
 # Check shared libs for unresolved symbols
 test_shlibs:
 	@echo "Testing $? "
-	@export $(LIB_PATH_VAR)=./bin && \
+	@$(LIB_PATH_VAR)=./bin && \
+	export $(LIB_PATH_VAR) && \
 	for module in $?; do \
 		./script/tests/dlopen.sh $${module} \
 			|| exit 1; \
@@ -2810,7 +2811,8 @@ test_shlibs:
 # Check for NSS module problems.
 test_nss_modules:: nss_modules
 	@echo "Testing $(NSS_MODULES) "
-	@export $(LIB_PATH_VAR)=./bin && \
+	@$(LIB_PATH_VAR)=./bin && \
+	export $(LIB_PATH_VAR) && \
 	for module in $(NSS_MODULES); do \
 		./script/tests/dlopen.sh $${module} \
 			|| exit 1; \
@@ -2820,7 +2822,8 @@ test_nss_modules:: nss_modules
 # built can actually be loaded by a minimal PAM-aware application.
 test_pam_modules:: pam_modules
 	@echo "Testing $(PAM_MODULES) "
-	@export $(LIB_PATH_VAR)=./bin && \
+	@$(LIB_PATH_VAR)=./bin && \
+	export $(LIB_PATH_VAR) && \
 	for module in $(PAM_MODULES); do \
 		./script/tests/dlopen.sh -lpam -ldl bin/$${module}.@SHLIBEXT@ \
 			|| exit 1; \
