--- a/lib/sqlite/Makefile.am
+++ b/lib/sqlite/Makefile.am
@@ -6,4 +6,4 @@ lib_LTLIBRARIES = libheimsqlite.la
 
 noinst_HEADERS = sqlite3.h sqlite3ext.h
 
-libsqlite_la_SOURCES = sqlite3.c
+libheimsqlite_la_SOURCES = sqlite3.c
