Add @CIFSUPCALL_PROGS@ to "all" target so cifs.upcall gets built at compile time rather than install time.  This stops problems where packaging scripts pass CFLAGS to "make" but not "make install".
Signed-off-by: Martin Schwenke <martin@meltin.net>
Signed-off-by: Michael Adam <obnox@samba.org>
(cherry picked from commit 884349af686faaf7b6bfec08eb2ac5dbc8e30fe5)

--- a/source/Makefile.in
+++ b/source/Makefile.in
@@ -1093,7 +1093,8 @@ VLP_OBJ = $(VLP_OBJ1) $(PARAM_OBJ) $(LIBSMB_OBJ) \
 # now the rules...
 ######################################################################
 all:: SHOWFLAGS libs $(SBIN_PROGS) $(BIN_PROGS) $(ROOT_SBIN_PROGS) \
-	$(MODULES) $(NSS_MODULES) $(PAM_MODULES) @EXTRA_ALL_TARGETS@
+	$(MODULES) $(NSS_MODULES) $(PAM_MODULES) @CIFSUPCALL_PROGS@ \
+	@EXTRA_ALL_TARGETS@
 
 nss_modules:: $(NSS_MODULES)
 
